--- a/style.css
+++ b/style.css
@@ -128,13 +128,13 @@ header {
     .row {
         width: 25%;
         height: 950px;
-        border: 1px solid black;
+        border: 1px solid lightgray;
     }
 
     .icons {
         text-align: center;
         padding: 10px 0;
-        border-bottom: 1px solid black;
+        border-bottom: 1px solid lightgrey;
     }
 
     .column-structure-text {
@@ -201,3 +201,31 @@ header {
         .color-icons {
             color: #1e90ff;
         }
+
+    .enterprise {
+        width: 100%;
+        height: 250px;
+        margin-top: 5%;
+        border: 1px solid lightgrey;
+    }
+
+    .enterprise > h3{
+        width: 10%;
+        height: 50px;
+        margin: 0 15px;
+        margin-top: 25px;
+        margin-bottom: 5px;
+        text-align: center;
+    }
+
+    .enterprise > h4 {
+        width: 25%;
+        height: 50px;
+        margin: 0 25px;
+    }
+
+    .enterprise > p {
+        width: 70%;
+        height: 50px;
+        margin: 0 25px;
+    }
