--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
     text-decoration: none;
 }
 
+p {
+    line-height: 20px;
+}
+
 /* HEADER */
 /* APPUNTI: L'header deve essere fixed e contenere un hover:underline sotto per i nav */
 /* APPNTI: hover sui bottoni blue che andando sopra con il mouse si schiarisce il background */
@@ -207,25 +211,64 @@ header {
         height: 250px;
         margin-top: 5%;
         border: 1px solid lightgrey;
+        position: relative;
     }
 
-    .enterprise > h3{
-        width: 10%;
-        height: 50px;
-        margin: 0 15px;
-        margin-top: 25px;
-        margin-bottom: 5px;
-        text-align: center;
+        .enterprise > h3{
+            width: 10%;
+            height: 50px;
+            margin: 0 15px;
+            margin-top: 25px;
+            margin-bottom: 5px;
+            text-align: center;
+        }
+
+        .enterprise > h4 {
+            width: 25%;
+            height: 50px;
+            margin: 0 25px;
+        }
+
+        .enterprise > p {
+            width: 50%;
+            height: 50px;
+            margin: 0 25px;
+            line-height: 20px;
+        }
+
+        .enterprise > .box {
+            width: 180px;
+            position: absolute;
+            top: 60px;
+            right: 20px;
+        }
+        
+    .info {
+        width: 100%;
+        margin: 10% 0;
+        height: 500px;
+        display: flex;
+        justify-content: space-between;
     }
 
-    .enterprise > h4 {
-        width: 25%;
-        height: 50px;
-        margin: 0 25px;
-    }
+        .partner {
+            width: 50%;
+            height: 500px;
+        }
 
-    .enterprise > p {
-        width: 70%;
-        height: 50px;
-        margin: 0 25px;
-    }
+        .partner > img {
+            width: 100%;
+            height: 500px;
+        }
+
+        #txt-partner {
+            width: 40%;
+            margin-left: 30px;
+            margin-top: 50px
+        }
+
+        #txt-partner > p {
+            padding: 25px 0;
+        }
+
+
