--- a/style.css
+++ b/style.css
@@ -256,19 +256,28 @@ header {
             height: 500px;
         }
 
-        .partner > img {
-            width: 100%;
-            height: 500px;
-        }
+            .partner > img {
+                width: 100%;
+                height: 500px;
+            }
 
-        #txt-partner {
-            width: 40%;
-            margin-left: 30px;
-            margin-top: 50px
-        }
+            #txt-partner {
+                width: 40%;
+                margin-left: 30px;
+                margin-top: 50px
+            }
 
-        #txt-partner > p {
-            padding: 25px 0;
-        }
+            #txt-partner > p {
+                padding: 25px 0;
+            }
 
+            #txt-partner > .box {
+                width: 27%;
+                border: 1px solid black;
+                background-color: white;
+                color: black;
+            }
 
+                .box a {
+                    color: black;
+                }
