--- a/style.css
+++ b/style.css
@@ -242,29 +242,29 @@ header {
             top: 60px;
             right: 20px;
         }
-        
+  
+/* PARTNER */
     .info {
-        width: 100%;
+        max-width: 100%;
         margin: 10% 0;
         height: 500px;
         display: flex;
         justify-content: space-between;
+        align-items: center;
     }
 
         .partner {
-            width: 50%;
+            width: 60%;
             height: 500px;
         }
 
             .partner > img {
                 width: 100%;
-                height: 500px;
             }
 
             #txt-partner {
-                width: 40%;
-                margin-left: 30px;
-                margin-top: 50px
+                width: 25%;
+                margin-right: 10%;
             }
 
             #txt-partner > p {
@@ -272,7 +272,7 @@ header {
             }
 
             #txt-partner > .box {
-                width: 27%;
+                width: 45%;
                 border: 1px solid black;
                 background-color: white;
                 color: black;
