--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ header {
 
 /* PIANO BUSINESS */
 .piano-business {
-    height: 1000px;
+    height: 3800px;
     margin: 5% 20%;
 }
 
@@ -289,3 +289,62 @@ header {
                 .box a {
                     color: black;
                 }
+            
+    .blocks {
+        margin-top: 30px;
+        height: 500px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+        .square {
+            width: 30%;
+            height: 500px;
+        }
+
+        .square > img {
+            width: 100%;
+            height: 280px;
+        }
+
+        .square > h2 {
+            margin: 20px 0;
+        }
+
+        .square > p {
+            font-size: 17px;
+        }
+    
+    .info-invito {
+        margin-top: 10%;
+        margin-bottom: 5%;
+    }
+
+    #scopri {
+        color: #1e90ff;
+    }
+
+    .carosello {
+        width: 100%;
+        height: 600px;
+        display: flex;
+        background-color: beige;
+    }
+
+    .grid1 {
+        width: 33%;
+        height: 600px;
+        background-color: coral;
+    }
+
+    .agency-info {
+        width: 34%;
+        height: 600px;
+        background-color: chartreuse;
+    }
+
+    .grid2 {
+        width: 33%;
+        height: 600px;
+        background-color: darksalmon;
+    }
