--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@ header {
                 text-align: center;
             }
 
-                .box a {
+                #txt-box {
                     color: black;
                 }
             
@@ -357,60 +357,84 @@ header {
         display: flex;
     }
 
-    .grid1 {
-        width: 33%;
-        height: 600px;
-    }
+        .grid1 {
+            width: 33%;
+            height: 600px;
+        }
 
-    .agency-info {
-        width: 34%;
-        height: 600px;
-        background-color: #F5F5F5 ;
-    }
+        .agency-info {
+            width: 34%;
+            height: 600px;
+            background-color: #F5F5F5 ;
+        }
 
-    .grid2 {
-        width: 33%;
-        height: 600px;
-        background-color: darksalmon;
-    }
+        .grid2 {
+            width: 33%;
+            height: 600px;
+            background-color: darksalmon;
+        }
 
-    .row-agency {
+        .row-agency {
+            width: 100%;
+            height: 300px;
+            display: flex;
+        }
+
+        .agency {
+            width: 50%;
+            height: 300px;
+            display: flex;
+            justify-content: center;
+        }
+
+        .invert {
+            width: 50%;
+            filter: brightness(0) invert(1);
+        }
+
+        #florida {
+            width: 50%;
+            height: 30px;
+            padding-top: 135px;
+            filter: brightness(0) invert(1);
+        }
+    
+        .container-agency-info {
+            width: 90%;
+            height: 600px;
+            margin:5% 5% ;
+
+        }
+
+        .container-agency-info img {
+            width: 50% ;
+            margin-bottom: 10%;
+        }
+
+        .container-agency-info p {
+            margin: 10% 0;
+        }
+
+    .extra {
         width: 100%;
         height: 300px;
         display: flex;
-    }
-
-    .agency {
-        width: 50%;
-        height: 300px;
-        display: flex;
         justify-content: center;
+        align-items: center;
     }
 
-    .invert {
-        width: 50%;
-        filter: brightness(0) invert(1);
+        .txt-brown {
+            width: 70%;
+            color: indigo;
+            margin-right: 10%;
+        }
+
+    #box-prova-gratuita {
+        padding: 10px 20px;
+        background-color: white;
     }
 
-    #florida {
-        width: 50%;
-        height: 30px;
-        padding-top: 135px;
-        filter: brightness(0) invert(1);
-    }
-   
-    .container-agency-info {
-        width: 90%;
-        height: 600px;
-        margin:5% 5% ;
-
-    }
-
-    .container-agency-info img {
-        width: 50% ;
-        margin-bottom: 10%;
-    }
-
-    .container-agency-info p {
-        margin: 10% 0;
-    }
+        #box-prova-gratuita a {
+            color: black;
+            text-decoration: none;
+        }
