--- a/style.css
+++ b/style.css
@@ -422,6 +422,9 @@ header {
         justify-content: center;
         align-items: center;
     }
+        .pubblicita {
+            padding-right: 15%;
+        }
 
         .txt-brown {
             width: 70%;
@@ -438,3 +441,44 @@ header {
             color: black;
             text-decoration: none;
         }
+.q-a {
+    margin: 5% 20%;
+}
+
+    .q-a h1{
+        margin-bottom: 5%;
+    }
+    .box-question {
+        padding: 35px 0;
+        border-top: 1px solid lightgray;
+        border-bottom: 1px solid lightgrey;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .box-question i {
+        margin-right: 5%;
+    }
+
+footer {
+    width: 100%;
+    height: 500px ;
+    background-color: black;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+    .container-footer {
+        width: 10%;
+        height: 250px;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    
+    .container-footer a {
+        color: white;
+        text-decoration: none;
+    }
