--- a/style.css
+++ b/style.css
@@ -464,10 +464,15 @@ footer {
     width: 100%;
     height: 500px ;
     background-color: black;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+
 }
+
+    .upside {
+        padding: 5% 0;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
 
     .container-footer {
         width: 10%;
@@ -481,4 +486,14 @@ footer {
     .container-footer a {
         color: white;
         text-decoration: none;
+    }
+
+    footer .line {
+        margin-left: 5%;
+    }
+
+    .lingua {
+        margin-top: 1%;
+        margin-left: 5%;
+        color: lightgrey;
     }
