--- a/style.css
+++ b/style.css
@@ -49,10 +49,13 @@ p {
 /* APPNTI: hover sui bottoni blue che andando sopra con il mouse si schiarisce il background */
 
 header {
+    width: 100%;
     height: 80px;
     background-image: url(img/logo-small.png);
     background-repeat: no-repeat;
     background-position: top 25px left 10px;
+    background-color: white;
+    position: fixed;
 }
 
     .container {
@@ -83,9 +86,9 @@ header {
 /* APPUNTI: Forse da cambiare l'altezza in vh */
 /* APPUNTI: La freccia deve portare nella schermata sotto "trova il piano business che fa per te" */
 .jumbotron {
+    padding-top: 10%;
     height: 650px;
     background-color: #b4c8e1;
-
 }
 
     .h1-container {
