--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
     text-decoration: none;
 }
 
+.box:hover {
+    background-color: #8cb3ff;
+}
+
 p {
     line-height: 20px;
 }
@@ -66,9 +70,13 @@ header {
     }
 
     nav a{
-        padding-left: 30px;
+        padding: 30px 20px;
         text-decoration: none;
         color: black;
+    }
+
+    nav .border-h:hover {
+        border-bottom: 2px solid black;
     }
 
     .container nav:first-child{       
@@ -82,11 +90,12 @@ header {
     #accedi {
         padding-right: 10px;
     }
+
 /* JUMBOTRON */
 /* APPUNTI: Forse da cambiare l'altezza in vh */
 /* APPUNTI: La freccia deve portare nella schermata sotto "trova il piano business che fa per te" */
 .jumbotron {
-    padding-top: 10%;
+    padding-top: 5%;
     height: 650px;
     background-color: #b4c8e1;
 }
