--- a/BONUS/style.css
+++ b/BONUS/style.css
@@ -8,7 +8,7 @@
 
 .box {
     padding: 10px 20px;
-    background-color: #1e90ff;
+    background-color: #0061ff;
     color: white;
     text-decoration: none;
 }
@@ -55,7 +55,6 @@ p {
 header {
     width: 100%;
     height: 80px;
-    background-image: url(img/logo-small.png);
     background-repeat: no-repeat;
     background-position: top 25px left 10px;
     background-color: white;
