--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ header {
         }
 
         .img > img {
-            width: 120%;
+            width: 800px;
         }
 
 /* PIANO BUSINESS */
@@ -505,7 +505,7 @@ footer {
     }
 
     .container-footer {
-        width: 10%;
+        width: 15%;
         height: 250px;
         color: white;
         display: flex;
@@ -519,12 +519,12 @@ footer {
     }
 
     footer .line {
-        margin-left: 260px;
+        margin-left: 225px;
     }
 
     .lingua {
         margin-top: 1%;
-        margin-left: 260px;
+        margin-left: 225px;
         color: lightgrey;
     }
 
